[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "codecrumbs"
version = "0.1.0"
description = "leave codecrumbs behind so that other can adopt the changes"
authors = ["Frank Hoffmann <15r10nk@polarbit.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/15r10nk/codecrumbs"
homepage = "https://github.com/15r10nk/codecrumbs"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
patch = "^1.16"
mypy = "^0.990"

[tool.poetry.plugins.pytest11]
codecrumbs = "codecrumbs.pytest_plugin"

[tool.poetry.scripts]
codecrumbs = "codecrumbs.__main__:main"
