[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src","tests"]
parallel = true
branch = true

[tool.poetry]
name = "codecrumbs"
version = "0.1.0"
description = "leave codecrumbs behind so that other can adopt the changes"
authors = ["Frank Hoffmann <15r10nk@polarbit.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/15r10nk/codecrumbs"
homepage = "https://github.com/15r10nk/codecrumbs"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.8"
executing = {version="^1.2.0", python=">=3.11"}
asttokens = {version="^2.2.1", python=">=3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
inline-snapshot = "^0.1.1"
coverage = {extras = ["toml"], version = "^6.5.0"}
patch = "^1.16"
mypy = "^0.990"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python-legacy"], version = "^0.19.0"}

[tool.poetry.plugins.pytest11]
codecrumbs = "codecrumbs.pytest_plugin"

[tool.poetry.scripts]
codecrumbs = "codecrumbs.__main__:main"

[tool.pytest.ini_options]
xfail_strict = true
