[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "assert False[,^]", "never_called\\(", "if False:"]

[tool.coverage.run]
branch = true
data_file = "$TOP/.coverage"
parallel = true
source = ["src", "tests", "codecrumbs"]

[tool.poetry]
authors = ["Frank Hoffmann <15r10nk@polarbit.de>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython"
]
description = "leave codecrumbs behind so that other can adopt the changes"
homepage = "https://github.com/15r10nk/codecrumbs"
license = "MIT"
name = "codecrumbs"
readme = "README.md"
repository = "https://github.com/15r10nk/codecrumbs"
version = "0.1.0"

[tool.poetry.dependencies]
asttokens = {version = "^2.2.1", python = ">=3.11"}
executing = {version = "^1.2.0", python = ">=3.11"}
python = "^3.8"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.5.0"}
coverage-enable-subprocess = "^1.0"
inline-snapshot = "^0.1.1"
mypy = "^0.990"
patch = "^1.16"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python-legacy"], version = "^0.19.0"}

[tool.poetry.plugins.pytest11]
codecrumbs = "codecrumbs.pytest_plugin"

[tool.poetry.scripts]
codecrumbs = "codecrumbs.__main__:main"

[tool.pytest.ini_options]
xfail_strict = true
