[metadata]
name = breadcrumbs
version = attr: breadcrumbs.__version__
description = leave breadcurmes behind so that other can adopt the changes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/15r10nk/breadcrumbs
author = Frank Hoffmann
author_email = 15r10nk@polarbit.de
maintainer = Frank Hoffmann
maintainer_email = 15r10nk@polarbit.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
pytest11 = breadcrumbs = breadcrumbs.pytest_plugin
