[metadata]
name = codecrumbs
version = attr: codecrumbs.__version__
description = leave codecrumbs behind so that other can adopt the changes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/15r10nk/codecrumbs
author = Frank Hoffmann
author_email = 15r10nk@polarbit.de
maintainer = Frank Hoffmann
maintainer_email = 15r10nk@polarbit.de
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    codecrumbs = codecrumbs.__main__:main
pytest11 = codecrumbs = codecrumbs.pytest_plugin
